--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 	"author": "Venugopal Reddy",
 	"license": "ISC",
 	"dependencies": {
+		"axios": "^0.27.2",
 		"bcryptjs": "^2.4.3",
 		"colors": "^1.4.0",
 		"dotenv": "^8.2.0",
